--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -371,6 +371,47 @@
       before:mx-1;
     }
   }
+
+  /* Modal */
+  .modal-banner {
+    @apply max-w-5xl
+    mx-auto
+    pt-7 
+    px-[5vw]
+    invisible
+    md:pt-10;
+
+    .wrapper {
+      @apply bg-firstlight
+      dark:bg-firstdark
+      outline-2
+      outline-white/50
+      dark:outline-secondark/50
+      -outline-offset-6
+      *:first-of-type:absolute
+      *:first-of-type:top-1
+      *:first-of-type:right-2
+      *:first-of-type:opacity-40
+      *:first-of-type:w-10
+      *:first-of-type:sm:w-7
+      *:last-of-type:p-5
+      *:last-of-type:flex
+      *:last-of-type:flex-col
+      *:last-of-type:sm:flex-row
+      *:last-of-type:*:first:w-6
+      *:last-of-type:*:first:fill-white/80
+      *:last-of-type:*:first:dark:fill-secondark
+      *:last-of-type:*:first:mb-1
+      *:last-of-type:*:first:sm:w-10
+      *:last-of-type:*:first:sm:mb-0
+      *:last-of-type:*:first:sm:mr-4
+      *:last-of-type:*:last:sm:w-10/12
+      *:last-of-type:*:last:*:font-bold
+      *:last-of-type:*:last:*:text-fluid-base
+      *:last-of-type:*:last:*:text-white
+      *:last-of-type:*:last:*:dark:text-secondark;
+    }
+  }
 }
 
 @utility container {
