--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -380,10 +380,12 @@
     pt-7 
     px-[5vw]
     invisible
-    md:pt-10;
+    md:pt-10
+    lg:px-0;
 
     .wrapper {
-      @apply bg-firstlight
+      @apply max-w-2xl
+      bg-firstlight
       dark:bg-firstdark
       outline-2
       outline-white/50
